--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,11 @@ text-align: left;
     align-items: center;
     padding: 40px 30px;
 margin-bottom: 30px;
-background-color: #F7F8F7;
 }
 
 .card {
     width: 50%;
+    background-color: #F7F8F7;
 }
 
 .cird__first {
@@ -222,7 +222,6 @@ background-color: #F7F8F7;
 }
 
 .card__img {
-    border-radius: 50%;
     max-width: 123px;
 }
 
@@ -441,6 +440,10 @@ margin-bottom: 150px;
     
 }
 
+.cases__block--hello {
+    margin-bottom: 20px;
+}
+
 .cases-block__logo {
     margin-bottom: 30px;
     display: inline-block;
@@ -620,7 +623,7 @@ color: #101828;
 .info__grid-block:hover {
     transform: scale(1.2);
     transition: 1s; 
-    background-color: red;
+    background-color: #e1f5fe;
 }
 
 .header__link:hover {
@@ -629,4 +632,33 @@ color: #A3A3A3;
 
 .nav__link:hover {
     color:var(--accent-color)
+}
+
+
+
+
+.tech__list--block:hover {
+    transform: scale(1.2);
+    transition: 1s; 
+    background-color:  #FFEFE9;
+}
+
+
+
+
+
+
+.card__img:hover {
+    border-radius: 50%;
+    transition: 1s; 
+    -webkit-transition: 1s ease;
+}
+
+.gallery__link--frist:hover {
+    color: #fff;
+    padding: 18px 42px;
+    background: #2979FF;
+    border-radius: 8px;
+transition: 1s; 
+text-shadow: none;
 }
